// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmptyState /> SSR should render EmptyState on server 1`] = `"<div id="root"><div data-blade-component="empty-state" class="BaseBox-bmPWx eRMGuT"><div data-blade-component="base-box" class="BaseBox-bmPWx iylgaX"><img src="https://shorturl.at/5z72G" alt="List view asset" width="96" height="96" style="object-fit:contain"/></div><div data-blade-component="base-box" class="BaseBox-bmPWx eWcMvj"><h6 class="StyledBaseText-dVBfTO eEjhUl" data-blade-component="heading">No data found</h6><p class="StyledBaseText-dVBfTO hpfIUV" data-blade-component="text">There&#x27;s no data to display right now</p></div></div></div>"`;

exports[`<EmptyState /> SSR should render EmptyState on server 2`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 20px;
}

.c1.c1.c1.c1.c1 {
  max-height: 90px;
  max-width: 90px;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 2px;
}

.c3.c3.c3.c3.c3 {
  color: hsla(211,26%,34%,1);
  font-family: "TASA Orbiter","TASA Orbiter Fallback Arial",Arial;
  font-size: 1.125rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c4.c4.c4.c4.c4 {
  color: hsla(211,22%,56%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

<div
  id="root"
>
  <div
    class="c0"
    data-blade-component="empty-state"
  >
    <div
      class="c1"
      data-blade-component="base-box"
    >
      <img
        alt="List view asset"
        height="96"
        src="https://shorturl.at/5z72G"
        style="object-fit:contain"
        width="96"
      />
    </div>
    <div
      class="c2"
      data-blade-component="base-box"
    >
      <h6
        class="c3"
        data-blade-component="heading"
      >
        No data found
      </h6>
      <p
        class="c4"
        data-blade-component="text"
      >
        There's no data to display right now
      </p>
    </div>
  </div>
</div>
`;

exports[`<EmptyState /> SSR should render EmptyState with minimal props on server 1`] = `"<div id="root"><div data-blade-component="empty-state" class="BaseBox-bmPWx eRMGuT"><div data-blade-component="base-box" class="BaseBox-bmPWx eWcMvj"><h6 class="StyledBaseText-dVBfTO eEjhUl" data-blade-component="heading">No data found</h6></div></div></div>"`;

exports[`<EmptyState /> SSR should render EmptyState with minimal props on server 2`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 20px;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 2px;
}

.c2.c2.c2.c2.c2 {
  color: hsla(211,26%,34%,1);
  font-family: "TASA Orbiter","TASA Orbiter Fallback Arial",Arial;
  font-size: 1.125rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

<div
  id="root"
>
  <div
    class="c0"
    data-blade-component="empty-state"
  >
    <div
      class="c1"
      data-blade-component="base-box"
    >
      <h6
        class="c2"
        data-blade-component="heading"
      >
        No data found
      </h6>
    </div>
  </div>
</div>
`;
